--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26614,7 +26614,7 @@ Meizu:
 
 # Devices with undectable brand, but detectable model
 Unknown:
-  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15)(?:[);/ ]|$)'
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'WebTV/(\d+\.\d+)'
@@ -26625,4 +26625,7 @@ Unknown:
       model: 'M10 Ultra' # clone xiaomi m10 ultra
     - regex: 'FO-R15(?:[);/ ]|$)'
       device: 'tv'
-      model: 'FO-R15' # clone xiaomi m10 ultra
+      model: 'FO-R15'
+    - regex: 'TVBOX(?:[);/ ]|$)'
+      device: 'tv'
+      model: ''
