--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26620,7 +26620,7 @@ Meizu:
 
 # Devices with undectable brand, but detectable model
 Unknown:
-  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX)(?:[);/ ]|$)'
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX|Smart TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'WebTV/(\d+\.\d+)'
@@ -26633,5 +26633,8 @@ Unknown:
       device: 'tv'
       model: 'FO-R15'
     - regex: 'TVBOX(?:[);/ ]|$)'
+      device: 'tv'
+      model: ''
+    - regex: 'Smart TV(?:[);/ ]|$)'
       device: 'tv'
       model: ''
